--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/cocktail-icon.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="MyHomeBar - Your personal bartender recommendation system" />
-    <title>MyHomeBar - Personal Bartender</title>
+    <meta name="description" content="Bar By Zifan" />
+    <meta property="og:image" content="https://barbyzifan.4tangs.com/preview.jpg" />
+    <title>Bar By Zifan</title>
   </head>
   <body>
     <div id="root"></div>
